--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
+html {
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 10px;
+  }   
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
